bk_ida/gccida/g2/free_for_value_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/free_for_value_p/src/reload1.c:5470:10: error: conflicting types for 'free_for_value_p'
__int64  free_for_value_p( 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/free_for_value_p/src/reload1.c:417:12: note: previous declaration is here
static int free_for_value_p             PARAMS ((int, enum machine_mode, int,
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/free_for_value_p/src/reload1.c:5516:24: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v37 = ( unsigned int)( mode_class_0[a2] - 5) <= 1; 
                       ^~~~~~~~~~~~
                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/free_for_value_p/src/reload1.c:5662:24: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = ( unsigned int)( mode_class_0[v22] - 5) <= 1; 
                       ^~~~~~~~~~~~
                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/free_for_value_p/src/obj/reload1.o] Error 1
